Write MOEAD notebook

--- a/portfolio_optimization_moead/portfolio-optimization-moead-cpp.ipynb
+++ b/portfolio_optimization_moead/portfolio-optimization-moead-cpp.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "/**\n",
-    " * @file portfolio-optimization-nsga2-cpp.ipynb\n",
+    " * @file portfolio-optimization-moead-cpp.ipynb\n",
     " *\n",
-    " * A simple practical application of Non Dominated Sorting Genetic Algorithm-2\n",
-    " * (NSGA2) in portfolio optimization. This example allows user to freely choose \n",
+    " * A simple practical application of MultiObjective Decomposition Evolutionary Algorithm\n",
+    " * - Differential Variant (MOEA/D-DE) in portfolio optimization. This example allows user to freely choose \n",
     " * multiple stocks of their choice, which upon request, generates csv automagically \n",
     " * via a helper function.\n",
     " *\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,15 +237,18 @@
     "const double lowerBound = 0;\n",
     "const double upperBound = 1;\n",
     "\n",
-    "ens::NSGA2 opt(20, // population size: The number of candidates in the population.\n",
-    "               300, // max generations: The maximum number of generations allowed.\n",
-    "               0.5, // crossover probability: The probability that the elites reproduce.\n",
-    "               0.5, // mutation  probability: The probability of mutation among the elite.\n",
-    "               1e-3, // mutation strength: The strength of the mutation.\n",
-    "               1e-6, // epsilon: The minimum difference required to distinguish between two solutions.\n",
-    "               lowerBound, // lowerBound: Lower bound of the coordinates of the initial population\n",
-    "               upperBound // upperBound: Upper bound of the coordinates of the initial population\n",
-    "               );\n",
+    "DefaultMOEAD opt(150, // Population size.\n",
+    "                 300,  // Max generations.\n",
+    "                 1.0,  // Crossover probability.\n",
+    "                 0.9, // Probability of sampling from neighbor.\n",
+    "                 20, // Neighborhood size.\n",
+    "                 20, // Perturbation index.\n",
+    "                 0.5, // Differential weight.\n",
+    "                 2, // Max childrens to replace parents.\n",
+    "                 1E-10, // epsilon.\n",
+    "                 lowerBound, // Lower bound.\n",
+    "                 upperBound // Upper bound.\n",
+    "                );\n",
     "\n",
     "arma::mat coords = pf.GetInitialPoint();\n",
     "auto objectives = pf.GetObjectives();"
@@ -262,29 +265,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The NSGA2 is a genetic algorithm which works by assigning fitness to each population member based on its collective performance on all the objectives. A member \"dominates\" another if it's assigned fitness is better than other, this results in an \"elite\" population. The elite population reproduce among themselves to produce superior off-springs. This process is done iteratively to arrive at an optimal set of solution known as the \"Pareto Front\". \n",
+    "MOEA/D-DE (Multi Objective Evolutionary Algorithm based on Decomposition - Differential Evolution) is a multi\n",
+    "objective optimization algorithm which works via Decomposition. Unlike traditional dominance based algorithm like NSGA-II, the concept of dominance is non-existant here. Instead a set of \"Reference Directions\" are generated which explitly allows us to control the distribution of the final Pareto Front. With the help of Decomposition functions, a scalar optimization problem is framed which \"pulls\" the population towards the true Pareto Front. MOEA/D-DE is much faster than NSGA-II and produces high quality Pareto Front in very few iterations.\n",
     "\n",
-    "The dominance relation is as follows:\n",
-    "\n",
-    "$$x_1\\ \\preceq_{D}\\ x_2$$ if $x_1$ is better than or equivalent to $x_2$ in all the specified objectives.\n",
-    "\n",
-    "where $\\preceq_{D}$ is the dominance symbol. "
+    "MOEAD offers a plethora of Decomposition Functions and Reference Direction generators via templates. For our case, we've utilized the trusty ```DefaultMOEAD```. Read the class documentation for other options."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Begin Optimization! (This will take a fair amount of time)"
+    "We would like to track the optimization process over the generations. For that let's create a container to store the current Pareto Front."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt.Optimize(objectives, coords);"
+    "std::vector<arma::cube> paretoFrontArray{};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This data structure would then be passed on to the \"QueryFront\" Callback which will track the evolution for us."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Begin Optimization! (This will take a fair amount of time)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.Optimize(objectives, coords, QueryFront(2, paretoFrontArray));"
    ]
   },
   {
@@ -296,13 +319,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   3.2988e-05\n",
+      "  -2.6566e-05\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "arma::cube paretoFront = opt.ParetoFront();\n",
     "\n",
     "std::cout << paretoFront.slice(0) << std::endl;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create an array to store the X and Y coordinates of all the Pareto Fronts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size_t numQuery = 300 / 2; // maxGeneration / queryRate.\n",
+    "\n",
+    "std::vector<std::vector<double>> frontArrayX(numQuery);\n",
+    "std::vector<std::vector<double>> frontArrayY(numQuery);"
    ]
   },
   {
@@ -314,24 +366,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "size_t populationSize = paretoFront.n_slices;\n",
-    "\n",
-    "//! Store the X, Y coordinates of the Pareto Front.\n",
-    "std::vector<double> frontX(populationSize, 0.);\n",
-    "std::vector<double> frontY(populationSize, 0.);\n",
-    "\n",
-    "for (size_t idx = 0; idx < populationSize; ++idx)\n",
+    "void FillFront(std::vector<double>& frontX,\n",
+    "               std::vector<double>& frontY,\n",
+    "               arma::cube& paretoFront)\n",
     "{\n",
+    "    size_t numPoints = paretoFront.n_slices;\n",
     "\n",
-    "    frontX[idx] = paretoFront.slice(idx)(0);\n",
-    "    // Append negative again to restore the original \n",
-    "    // maximization objective.\n",
-    "    frontY[idx] = -paretoFront.slice(idx)(1);\n",
+    "    //! Store the X, Y coordinates of the Pareto Front.\n",
+    "    frontX.resize(numPoints);\n",
+    "    frontY.resize(numPoints);\n",
+    "\n",
+    "    for (size_t idx = 0; idx < numPoints; ++idx)\n",
+    "    {\n",
+    "\n",
+    "        frontX[idx] = paretoFront.slice(idx)(0);\n",
+    "        // Append negative again to restore the original \n",
+    "        // maximization objective.\n",
+    "        frontY[idx] = -paretoFront.slice(idx)(1);\n",
+    "    }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (size_t idx = 0; idx < numQuery; ++idx)\n",
+    "    FillFront(frontArrayX[idx], frontArrayY[idx], paretoFrontArray[idx]);"
    ]
   },
   {
@@ -358,21 +425,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "375542fef09e461298ed0c9ebf36a78e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: 375542fef09e461298ed0c9ebf36a78e"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt::figure_size(800, 800);\n",
-    "plt::scatter(frontX, frontY, 50);\n",
     "\n",
-    "plt::xlabel(\"Returns\");\n",
-    "plt::ylabel(\"Volatility\");\n",
+    "for (size_t idx = 0; idx < numQuery; ++idx)\n",
+    "    plt::scatter(frontArrayX[idx], frontArrayY[idx], 50, {{\"c\", \"r\"}});\n",
+    "\n",
+    "plt::xlabel(\"Volatility\");\n",
+    "plt::ylabel(\"Returns\");\n",
     "\n",
     "plt::title(\"The Pareto Front\");\n",
     "plt::legend();\n",
     "\n",
     "plt::save(\"./plot.png\");\n",
-    "auto im = xw::image_from_file(\"plot.png\").finalize();\n",
+    "auto im = xw::image_from_file(\"plot.png\");\n",
     "im"
    ]
   },
