--- a/portfolio_optimization_moead/portfolio-optimization-moead-cpp.ipynb
+++ b/portfolio_optimization_moead/portfolio-optimization-moead-cpp.ipynb
@@ -457,7 +457,7 @@
     "plt::legend();\n",
     "\n",
     "plt::save(\"./plot.png\");\n",
-    "auto im = xw::image_from_file(\"plot.png\");\n",
+    "auto im = xw::image_from_file(\"plot.png\").finalize();\n",
     "im"
    ]
   },
