resolved style issues

--- a/california_housing_price_prediction_with_linear_regression/California_housing_prices_predictions_with_lr_python.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/California_housing_prices_predictions_with_lr_python.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "59847a9b",
+   "id": "7ffef0ff",
    "metadata": {},
    "source": [
     "### Predicting  California House Prices with  Linear Regression\n",
     "\n",
     "### Objective\n",
     "* To predict California Housing Prices using the most simple Linear Regression Model and see how it performs.\n",
-    "* To understand the modeling workflow using MLPACK.\n",
+    "* To understand the modeling workflow using mlpack.\n",
     "\n",
     "### About the Data\n",
     " This dataset is a modified version of the California Housing dataset available from Luís Torgo's page (University of Porto). Luís Torgo obtained it from the StatLib repository (which is closed now). The dataset may also be downloaded from StatLib mirrors.\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee257a7d",
+   "id": "3c760992",
    "metadata": {},
    "source": [
     "### Big Picture\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d8c9867",
+   "id": "fc550b59",
    "metadata": {},
    "source": [
     "<h3> Importing Libraries </h3>"
@@ -72,20 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "135a4ec4",
+   "execution_count": 1,
+   "id": "a1441566",
    "metadata": {},
    "outputs": [],
    "source": [
     "import mlpack\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c6f5538b",
+   "id": "5c33741e",
    "metadata": {},
    "source": [
     "<h3>Get the Data</h3>\n",
@@ -96,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c616d892",
+   "id": "2a9ceafe",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f347c8",
+   "id": "232b2fd3",
    "metadata": {},
    "source": [
     "<h3>  Discover and Visualize the Data </h3>"
@@ -132,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7941edaa",
+   "id": "4f51f1c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ffafce3c",
+   "id": "79251923",
    "metadata": {},
    "outputs": [
     {
@@ -270,14 +271,14 @@
     }
    ],
    "source": [
-    "# Lets print the first 5 rows of the dataset\n",
+    "# Lets print the first 5 rows of the dataset.\n",
     "dataset.head() "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "733d8e3b",
+   "id": "ae042e5d",
    "metadata": {},
    "outputs": [
     {
@@ -451,14 +452,14 @@
     }
    ],
    "source": [
-    "# Lets look into some statistics \n",
+    "# Lets look into some statistics.\n",
     "dataset.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c8835b87",
+   "id": "cfcea99e",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7df3c59",
+   "id": "57d17c78",
    "metadata": {},
    "source": [
     "<i>If you look closely, \"total_bedrooms\" column has some missing values. Later, we will learn how to deal with these missing values.</i>"
@@ -500,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2131ed10",
+   "id": "015161cf",
    "metadata": {},
    "outputs": [
     {
@@ -517,8 +518,7 @@
     }
    ],
    "source": [
-    "# We are using matplotlib for visualization\n",
-    "%matplotlib inline\n",
+    "# We are using matplotlib for visualization.\n",
     "dataset.hist(bins=50, figsize=(20,15))\n",
     "plt.show()"
    ]
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "540fb5ec",
+   "id": "607214a7",
    "metadata": {},
    "outputs": [
     {
@@ -553,14 +553,14 @@
     }
    ],
    "source": [
-    "# let's plot  a scatter plot according to co-ordinates\n",
+    "# Let's plot  a scatter plot according to co-ordinates.\n",
     "dataset.plot(kind=\"scatter\", x=\"longitude\", y=\"latitude\", alpha = 0.1)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b4da7617",
+   "id": "a2e78140",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
     }
    ],
    "source": [
-    "# Now lets plot according to price \n",
+    "# Now lets plot according to price.\n",
     "dataset.plot(kind=\"scatter\", x=\"longitude\", y=\"latitude\", alpha=0.4,\n",
     "             s=dataset[\"population\"]/100, label=\"population\", figsize=(10,7),\n",
     "             c=\"median_house_value\", cmap=plt.get_cmap(\"jet\"), colorbar=True,\n",
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a68b6549",
+   "id": "343a7b40",
    "metadata": {},
    "outputs": [
     {
@@ -615,9 +615,9 @@
     }
    ],
    "source": [
-    "#Lets plot this on top of a piece of california map\n",
+    "# Lets plot this on top of a piece of california map.\n",
     "import matplotlib.image as mpimg\n",
-    "california_img=mpimg.imread('california.png') #path to california image\n",
+    "california_img=mpimg.imread('california.png') #path to california image.\n",
     "ax = dataset.plot(kind=\"scatter\", x=\"longitude\", y=\"latitude\", figsize=(10,7),\n",
     "                  s=dataset['population']/100, label=\"Population\",\n",
     "                  c=\"median_house_value\", cmap=plt.get_cmap(\"jet\"),\n",
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fdaef3c",
+   "id": "6859d178",
    "metadata": {},
    "source": [
     "<h4>  Let's deal with Missing Values</h4>"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2e2b1e13",
+   "id": "cd7b0f63",
    "metadata": {},
    "outputs": [
     {
@@ -768,14 +768,14 @@
     }
    ],
    "source": [
-    "# lets print whichever column has missing values\n",
+    "# Lets print whichever column has missing values.\n",
     "sample_incomplete_rows = dataset[dataset.isnull().any(axis=1)].head()\n",
     "sample_incomplete_rows"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "90beaade",
+   "id": "296cfb38",
    "metadata": {},
    "source": [
     "<i>It can be clearly seen that only total_bedrooms has missing values. Let's fill these missing values using median of the column.</i>\n"
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5ccb4676",
+   "id": "2c182111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ac905e4b",
+   "id": "bc5c802e",
    "metadata": {},
    "outputs": [
     {
@@ -828,31 +828,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dcca80e",
+   "id": "5a7562d4",
    "metadata": {},
    "source": [
     "It can be clearly seen now that we have filled all the missing values.\n",
     "<br>\n",
     "<b> NOTE: </b>\n",
     " 1. We can also impute here using mean.\n",
-    " 2. For categorical data, use mode"
+    " 2. For categorical data, use mode."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e7d32b03",
+   "id": "5241d10d",
    "metadata": {},
    "source": [
     "<h4>Let's deal with Categorical Values</h4>\n",
     "We will use One hot encoding for this. It will create seperate columns of all categorical features and use : <br>\n",
-    "'1' : If a row has that feature <br>\n",
-    "'0' : If a row doesn't have that feature"
+    "'1' : If a row has that feature.<br>\n",
+    "'0' : If a row doesn't have that feature."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5ead7fb2",
+   "id": "c25339f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6c9ba8a5",
+   "id": "b38ebafa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "69016843",
+   "id": "33f33aad",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc92e058",
+   "id": "f7cd5c17",
    "metadata": {},
    "source": [
     "<i> As discussed, it created four different features according to categorical values. </i> <br>\n",
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19863002",
+   "id": "1a614e50",
    "metadata": {},
    "source": [
     "<h3>Let's create some more features </h3>\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "022c5578",
+   "id": "3c3adf00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "43e11dd1",
+   "id": "4130bd66",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1157a33",
+   "id": "493fde97",
    "metadata": {},
    "source": [
     "<h4> It is important to check what kind of correlation the features has, especially during feature engineering. </h4> "
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83f5b97e",
+   "id": "7b506260",
    "metadata": {},
    "source": [
     "<h3> Let's prepare the data for Training </h3>"
@@ -995,11 +995,11 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "95abfa35",
+   "id": "7816ee97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This function will split the data into requirement ratio and shuffle so that we can as get random data\n",
+    "#This function will split the data into requirement ratio and shuffle so that we can as get random data.\n",
     "def split_train_test(data, test_ratio):\n",
     "  shuffled_indices = np.random.permutation(len(data))\n",
     "  test_set_size = int(len(data)*test_ratio)\n",
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "43929b0b",
+   "id": "18738ea5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "147124ee",
+   "id": "0e289618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4467f951",
+   "id": "3deafa5e",
    "metadata": {},
    "source": [
     "<h3>Model Training </h3>\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4a629093",
+   "id": "cb5381fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e09ce39b",
+   "id": "670501f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e91a18b",
+   "id": "34596fba",
    "metadata": {},
    "source": [
     "<i> Our Model is Trained, now lets make predictions on the test_set</i>"
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fe245be1",
+   "id": "a860072b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "72c786eb",
+   "id": "15a9ef75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8a84216",
+   "id": "1c5f2eaa",
    "metadata": {},
    "source": [
     "<i> Let's see the residuals now</i>"
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d458dff2",
+   "id": "b3a19cd7",
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca3346f8",
+   "id": "a10af570",
    "metadata": {},
    "source": [
     "## Evaluation Metrics for Regression model\n",
@@ -1134,7 +1134,7 @@
     "\n",
     "* Mean Absolute Error (MAE) is the sum of absolute differences between actual and predicted values, without considering the direction.\n",
     "$$ MAE = \\frac{\\sum_{i=1}^n\\lvert y_{i} - \\hat{y_{i}}\\rvert} {n} $$\n",
-    "* Mean Squared Error (MSE) is calculated as the mean or average of the squared differences between predicted and expected target values in a dataset, a lower value is better\n",
+    "* Mean Squared Error (MSE) is calculated as the mean or average of the squared differences between predicted and expected target values in a dataset, a lower value is better.\n",
     "$$ MSE = \\frac {1}{n} \\sum_{i=1}^n (y_{i} - \\hat{y_{i}})^2 $$\n",
     "* Root Mean Squared Error (RMSE), Square root of MSE yields root mean square error (RMSE) it indicates the spread of the residual errors. It is always positive, and a lower value indicates better performance.\n",
     "$$ RMSE = \\sqrt{\\frac {1}{n} \\sum_{i=1}^n (y_{i} - \\hat{y_{i}})^2} $$"
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "f65924cf",
+   "id": "749f2a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "43989e8c",
+   "id": "161e7ee1",
    "metadata": {},
    "outputs": [
     {
@@ -1180,20 +1180,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0731a565",
+   "id": "98bd24d3",
    "metadata": {},
    "source": [
     "We can clearly see that the MAE is 49674, when compared with the median house value doesn't seems to be a good fit. \n",
     "\n",
     "Thus we can conclude that, the simple Linear Regression models is not being able to catch all the features.\n",
     "So, maybe its time for you to try other algorithms. \n",
-    "<h5>NOTE : </h5> In the entire ML workflow, you never know exactly which model will perfrom the best. So, usually you try a lot of different algorithms to see which fits the model. "
+    "<h5>NOTE : </h5> In the entire ML workflow, you never know exactly which model will perfrom the best. So, usually you try a lot of different algorithms to see which fits the model."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce773f5",
+   "id": "62d80ec4",
    "metadata": {},
    "outputs": [],
    "source": []
