added additional & default parameters for plotting functions

--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ac3caf12-b4f2-4dc3-bf7a-0e855d6f245e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1bbdb43e-e14e-4c36-aa1e-3312739b9858",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "ce45d9ac-b131-462c-8f2e-e019a0f5f303",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "6d45544e-9f6d-4fab-93b2-ded5b51aa9dd",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "9d79dabe-286d-4278-9d41-d06a4048b7b0",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "4211bf8b-0b98-4edf-9ae2-6159a7ed5bd3",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "ae1a3152-76bc-43ce-894b-6554a2f0ad8a",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "7619f5f1-7e33-4257-9868-999593810d96",
    "metadata": {},
    "outputs": [
@@ -231,29 +231,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "9c2b6725-f2ea-4e1b-ae0e-2fbc2cf71833",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9eed9fcadd164236af22beefe5f8925b",
+       "model_id": "3b2897b830fe4e92882b429ab9e230e3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 9eed9fcadd164236af22beefe5f8925b"
+       "A Jupyter widget with unique id: 3b2897b830fe4e92882b429ab9e230e3"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scatter(\"avocado.csv\", \"conventional\", \"convAvgPriceScatter\");\n",
-    "auto img = xw::image_from_file(\"convAvgPriceScatter.png\").finalize();\n",
+    "scatter(\"avocado.csv\", \"Date\", \"AveragePrice\", \"Date\", \"type\", \"conventional\", \"AveragePrice\", \"Date\", \"Average Price (USD)\", \"Average Price of Conventional Avocados Over Time\");\n",
+    "auto img = xw::image_from_file(\"Average Price of Conventional Avocados Over Time.png\").finalize();\n",
     "img"
    ]
   },
@@ -267,29 +267,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "aadbc14a-8ff4-4269-a6f5-f25f1a5f1b68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dd0f7aa483b4af5ab0d76be70da4e65",
+       "model_id": "8e823a1e3c2a40b9a87d35cc12fe3b1a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 8dd0f7aa483b4af5ab0d76be70da4e65"
+       "A Jupyter widget with unique id: 8e823a1e3c2a40b9a87d35cc12fe3b1a"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scatter(\"avocado.csv\", \"organic\", \"orgAvgPriceScatter\");\n",
-    "auto img = xw::image_from_file(\"orgAvgPriceScatter.png\").finalize();\n",
+    "scatter(\"avocado.csv\", \"Date\", \"AveragePrice\", \"Date\", \"type\", \"organic\", \"AveragePrice\", \"Date\", \"Average Price (USD)\", \"Average Price of Organic Avocados Over Time\");\n",
+    "auto img = xw::image_from_file(\"Average Price of Organic Avocados Over Time.png\").finalize();\n",
     "img"
    ]
   },
@@ -306,56 +306,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "baebdee8-e33c-4e98-80ff-5cbc83c71284",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dad5ac3bf00a46769d78f086e0c6f13b",
+       "model_id": "75ed134b64f048c69511c075036a283f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: dad5ac3bf00a46769d78f086e0c6f13b"
+       "A Jupyter widget with unique id: 75ed134b64f048c69511c075036a283f"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "barplot(\"avocado.csv\", \"AveragePrice\", \"region\", \"Avg.Price of Avocado by Region\", 8, 10);\n",
+    "barplot(\"avocado.csv\", \"AveragePrice\", \"region\", \"Date\", \"Avg.Price of Avocado by Region\", 8, 10);\n",
     "auto img = xw::image_from_file(\"Avg.Price of Avocado by Region.png\").finalize();\n",
     "img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "181dd76f-f9a1-4e87-9c67-069f4386041f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "223c4176334b42e1a141b3b79ea4c12e",
+       "model_id": "fe46f70d2e5a4535be688c20e681df2b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 223c4176334b42e1a141b3b79ea4c12e"
+       "A Jupyter widget with unique id: fe46f70d2e5a4535be688c20e681df2b"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "barplot(\"avocado.csv\", \"type\", \"AveragePrice\", \"Avg.Price of Avocado by Type\");\n",
+    "barplot(\"avocado.csv\", \"type\", \"AveragePrice\", \"Date\", \"Avg.Price of Avocado by Type\");\n",
     "auto img = xw::image_from_file(\"Avg.Price of Avocado by Type.png\").finalize();\n",
     "img"
    ]
@@ -379,22 +379,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "8926f7d1-faa5-47c6-aed4-fe7c37035b09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55379d77f48e47cdbc5b94f0449181a3",
+       "model_id": "211350146429449f9ddc1b8d90c99520",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 55379d77f48e47cdbc5b94f0449181a3"
+       "A Jupyter widget with unique id: 211350146429449f9ddc1b8d90c99520"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "e26a5936-d0ee-474a-a733-7b8063b3a672",
    "metadata": {},
    "outputs": [],
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "536d598e-9894-4047-96fa-82ac14ded328",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "30bba7d3-0c09-4472-bf6f-1150b13535a1",
    "metadata": {},
    "outputs": [],
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "c39b65dd-aa03-4281-a057-86d4f8b293b6",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "3f936744-df4a-44d0-ac13-b2614fb06960",
    "metadata": {},
    "outputs": [],
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "97fdc354-57d0-4e28-91e8-1d707fc24226",
    "metadata": {},
    "outputs": [],
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "5d4cd76e-3a6b-4f4b-9bde-002acf0d126e",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "e25fa64a-e728-43ad-abfb-d8e385a62d73",
    "metadata": {},
    "outputs": [],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "020e0c3e-81bc-4bcb-be8d-4febdf8b97ee",
    "metadata": {},
    "outputs": [],
@@ -580,22 +580,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "71a54770-db87-4b69-abdd-9efba5accccf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a09e0c89eb054295a1ca9df66c26ce29",
+       "model_id": "d3ead2cbe58c407bb136fa3fdf7942a3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: a09e0c89eb054295a1ca9df66c26ce29"
+       "A Jupyter widget with unique id: d3ead2cbe58c407bb136fa3fdf7942a3"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,22 +608,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "e8d8626e-81b3-498e-851d-59d49c937c01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54a491bc4b4549e594bcede5ebd7eada",
+       "model_id": "792d2da160b54d9c8374fd2c45dbe2a4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 54a491bc4b4549e594bcede5ebd7eada"
+       "A Jupyter widget with unique id: 792d2da160b54d9c8374fd2c45dbe2a4"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "8b323dc0-61f8-43c1-ae8a-38027c04ff88",
    "metadata": {},
    "outputs": [
@@ -661,9 +661,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 0.198396\n",
-      "Mean Squared Error: 0.0694186\n",
-      "Root Mean Squared Error: 0.263474\n"
+      "Mean Absolute Error: 0.201418\n",
+      "Mean Squared Error: 0.0721066\n",
+      "Root Mean Squared Error: 0.268527\n"
      ]
     }
    ],
